--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -1682,14 +1682,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "100ef586-7e82-4448-b5df-e98cc981c007",
+   "cell_type": "markdown",
+   "id": "5e461d54-0ca0-4bf2-aa3e-c2eb82aec64b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Задание 6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "510be0e3-300b-4cee-bd86-2f31f7895018",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94535a6b-e77a-43b1-a07a-a964db05c13c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1708,7 +1732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
