--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "id": "38fd8327-063c-4078-8477-f55fe7dda0b8",
    "metadata": {},
    "outputs": [
@@ -272,13 +272,14 @@
        "[1599 rows x 12 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "#загрузка данных\n",
     "\n",
     "df = pd.read_csv('vine.dat', header=None)\n",
     "df.columns =['FixedAcidity', 'VolatileAcidity', 'CitricAcid', 'ResidualSugar', 'Chlorides', 'FreeSulfurDioxide', 'TotalSulfurDioxide', 'Density', 'PH', 'Sulphates', 'Alcohol', 'Class']\n",
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "id": "a0384ec9-1890-485d-a19d-f0611e060c82",
    "metadata": {},
    "outputs": [],
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "id": "6a2ade65-e5e1-4962-9561-cd5e4e90c939",
    "metadata": {},
    "outputs": [
@@ -560,14 +561,14 @@
        "[1599 rows x 12 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Columns = ['FixedAcidity', 'VolatileAcidity', 'CitricAcid', 'ResidualSugar', 'Chlorides', 'FreeSulfurDioxide', 'TotalSulfurDioxide', 'Density', 'PH', 'Sulphates', 'Alcohol']\n",
-    "\n",
+    "#columns - все колонки, без класса!\n",
     "scaler_std = preprocessing.StandardScaler()\n",
     "x = scaler_std.fit_transform(df[Columns])\n",
     "df[Columns] = x\n",
